# QuicRTP

./: CMakeLists.txt  Dockerfile  INSTALL.MD  README.md  cache_manager.cpp  cache_manager.h  config.conf.sample  config.cpp  config.h  docker-compose.yml  logger.cpp  logger.h  main.cpp  quic_client.cpp  quic_client.h  quicrtp.conf.sample  rtp_listener.cpp  rtp_listener.h  session_manager.cpp  session_manager.h  translator.cpp  translator.h
Docker/: Dockerfile
conf/etc/quicrtp/: quicrtp.conf
rtp-quic-proxy/: README.md  docker-compose.yml
rtp-quic-proxy/config-ui/: app.py  auth.py  models.py  requirements.txt
rtp-quic-proxy/quic-to-rtp/: Dockerfile  billing.py  reciever.py  requirements.txt  srtp.py
rtp-quic-proxy/rtp-to-quic/: Dockerfile  sender.py
src/: config.h  logger.h  main.cpp  main.cpp.v2  quic_client.cpp  quic_client.h  rtp_listener.h  translator.cpp
